@@ -72,6 +72,7 @@ Version 1.3.9+svn:
    * double-click in dialog now triggers a "press button" sound
    * fix an exploit using the "black stripes" of a unit with teleport ability
      to detect enemy villages under fog
+   * fix the wrong "(1) turn to reach" on already captured village
  * WML engine:
    * extended [store_side] behavior, so that it additionally writes the following:
      fog, shroud, colour, user_team_name, controller, recruit (the recruit list),
